--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
     <TextView
         android:id="@+id/textViewCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Licznik: 0"
         android:textSize="24sp"/>
+
     <EditText
         android:id="@+id/userText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:hint="write text"
+        android:inputType="text"/>
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Switch
+        android:id="@+id/changeBGColor"
+        android:layout_width="48dp"
+        android:layout_height="48dp" />
+
     <Button
         android:id="@+id/buttonIncrement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Zwiększ"/>
+
 </LinearLayout>
