--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:color="@color/white"
+    android:id="@+id/llinearlayout"
+    >
 
     <TextView
         android:id="@+id/textViewCount"
@@ -35,5 +38,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Zwiększ"/>
-
 </LinearLayout>
