--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:color="@color/white"
-    android:id="@+id/llinearlayout"
     >
 
     <TextView
@@ -14,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Licznik: 0"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        />
 
     <EditText
         android:id="@+id/userText"
@@ -27,6 +27,15 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/optionSet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Opcja oznaczona"
+        android:visibility="gone"
+        />
+
 
     <Switch
         android:id="@+id/changeBGColor"
